Update for better upload to wemos + home assistant yaml in english + constants published in mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,20 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-lib_deps = git+https://github.com/homieiot/homie-esp8266.git#8e905f0
 
-monitor_speed = 115200
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+monitor_speed = 11250
+
+lib_deps =
+  git+https://github.com/homieiot/homie-esp8266.git#8e905f0
+  me-no-dev/ESPAsyncTCP @ ^1.2.2
+
+# Empêche le fork ESPhome d’être lié
+lib_ignore =
+  ESPAsyncTCP-esphome
+
+# Aide le résolveur de dépendances
+lib_ldf_mode = chain+
 
 ; Enable and update MQTT details to use MQTT based firmware update (not possible for initial flash!)
 ;upload_protocol = custom
