--- a/home-assistant/senseo_wifi.yaml
+++ b/home-assistant/senseo_wifi.yaml
@@ -1,18 +1,175 @@
 mqtt:
+  number:
+    - name: senseowifi_pulse_dur_led_slow
+      unique_id: uniqueid__senseowifi_pulse_dur_led_slow
+      icon: mdi:led-on
+      state_topic: "homie/senseowifi1/params/pulseDurLedSlow"
+      command_topic: "homie/senseowifi1/params/pulseDurLedSlow/set"
+      min: 10
+      max: 5000
+      step: 10
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_pulse_dur_led_fast
+      unique_id: uniqueid__senseowifi_pulse_dur_led_fast
+      icon: mdi:led-on
+      state_topic: "homie/senseowifi1/params/pulseDurLedFast"
+      command_topic: "homie/senseowifi1/params/pulseDurLedFast/set"
+      min: 10
+      max: 1000
+      step: 5
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_pulse_dur_tolerance
+      unique_id: uniqueid__senseowifi_pulse_dur_tolerance
+      icon: mdi:delta
+      state_topic: "homie/senseowifi1/params/pulseDurTolerance"
+      command_topic: "homie/senseowifi1/params/pulseDurTolerance/set"
+      min: 0
+      max: 100
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_pulse_cont_threshold
+      unique_id: uniqueid__senseowifi_pulse_cont_threshold
+      icon: mdi:timer-sand
+      state_topic: "homie/senseowifi1/params/pulseContThreshold"
+      command_topic: "homie/senseowifi1/params/pulseContThreshold/set"
+      min: 10
+      max: 10000
+      step: 10
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_heating_time
+      unique_id: uniqueid__senseowifi_heating_time
+      icon: mdi:heat-wave
+      state_topic: "homie/senseowifi1/params/HeatingTime"
+      command_topic: "homie/senseowifi1/params/HeatingTime/set"
+      min: 10
+      max: 300
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_heating_time_tol
+      unique_id: uniqueid__senseowifi_heating_time_tol
+      icon: mdi:heat-wave
+      state_topic: "homie/senseowifi1/params/HeatingTimeTol"
+      command_topic: "homie/senseowifi1/params/HeatingTimeTol/set"
+      min: 0
+      max: 100
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_brew1cup_seconds
+      unique_id: uniqueid__senseowifi_brew1cup_seconds
+      icon: mdi:coffee
+      state_topic: "homie/senseowifi1/params/Brew1CupSeconds"
+      command_topic: "homie/senseowifi1/params/Brew1CupSeconds/set"
+      min: 5
+      max: 120
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_brew2cup_seconds
+      unique_id: uniqueid__senseowifi_brew2cup_seconds
+      icon: mdi:coffee
+      state_topic: "homie/senseowifi1/params/Brew2CupSeconds"
+      command_topic: "homie/senseowifi1/params/Brew2CupSeconds/set"
+      min: 5
+      max: 120
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_brew_heat1cup_seconds
+      unique_id: uniqueid__senseowifi_brew_heat1cup_seconds
+      icon: mdi:coffee
+      state_topic: "homie/senseowifi1/params/BrewHeat1CupSeconds"
+      command_topic: "homie/senseowifi1/params/BrewHeat1CupSeconds/set"
+      min: 5
+      max: 120
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_brew_heat2cup_seconds
+      unique_id: uniqueid__senseowifi_brew_heat2cup_seconds
+      icon: mdi:coffee
+      state_topic: "homie/senseowifi1/params/BrewHeat2CupSeconds"
+      command_topic: "homie/senseowifi1/params/BrewHeat2CupSeconds/set"
+      min: 5
+      max: 180
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_cup_debounce_interval
+      unique_id: uniqueid__senseowifi_cup_debounce_interval
+      icon: mdi:timer
+      state_topic: "homie/senseowifi1/params/CupDebounceInterval"
+      command_topic: "homie/senseowifi1/params/CupDebounceInterval/set"
+      min: 0
+      max: 2000
+      step: 10
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_led_ignore_change_duration
+      unique_id: uniqueid__senseowifi_led_ignore_change_duration
+      icon: mdi:led-strip-variant
+      state_topic: "homie/senseowifi1/params/LedIgnoreChangeDuration"
+      command_topic: "homie/senseowifi1/params/LedIgnoreChangeDuration/set"
+      min: 0
+      max: 100
+      step: 1
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+
+    - name: senseowifi_press_duration
+      unique_id: uniqueid__senseowifi_press_duration
+      icon: mdi:gesture-tap-hold
+      state_topic: "homie/senseowifi1/params/pressDuration"
+      command_topic: "homie/senseowifi1/params/pressDuration/set"
+      min: 50
+      max: 1000
+      step: 10
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+      
   switch:
     - name: senseowifi_power
       unique_id: uniqueid__senseowifi_power
       icon: mdi:power
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/power"
+      state_topic: "homie/senseowifi1/machine/power"
       state_on: "true"
       state_off: "false"
       #
-      command_topic: "homie/senseo-wifi-rf21/machine/power/set"
+      command_topic: "homie/senseowifi1/machine/power/set"
       payload_on: "true"
       payload_off: "false"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -21,12 +178,12 @@ mqtt:
       unique_id: uniqueid__senseowifi_out_of_water
       icon: mdi:water-off-outline
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/outOfWater"
+      state_topic: "homie/senseowifi1/machine/outOfWater"
       payload_on: "true"
       payload_off: "false"
       device_class: problem
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -34,11 +191,11 @@ mqtt:
       unique_id: uniqueid__senseowifi_cup_available
       icon: mdi:coffee-outline
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/cupAvailable"
+      state_topic: "homie/senseowifi1/machine/cupAvailable"
       payload_on: "true"
       payload_off: "false"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -46,11 +203,11 @@ mqtt:
       unique_id: uniqueid__senseowifi_cup_full
       icon: mdi:coffee
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/cupFull"
+      state_topic: "homie/senseowifi1/machine/cupFull"
       payload_on: "true"
       payload_off: "false"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -59,9 +216,9 @@ mqtt:
       unique_id: uniqueid__senseowifi_brewed_size
       icon: mdi:coffee-maker
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/brewedSize"
+      state_topic: "homie/senseowifi1/machine/brewedSize"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -69,9 +226,9 @@ mqtt:
       unique_id: uniqueid__senseowifi_opstate
       icon: mdi:state-machine
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/opState"
+      state_topic: "homie/senseowifi1/machine/opState"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -81,9 +238,9 @@ mqtt:
       unique_id: uniqueid__senseowifi_debug
       icon: mdi:comment-text-multiple-outline
       #
-      state_topic: "homie/senseo-wifi-rf21/machine/debug"
+      state_topic: "homie/senseowifi1/machine/debug"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
       #
@@ -93,10 +250,10 @@ mqtt:
       unique_id: uniqueid__senseowifi_rssi
       icon: mdi:signal-cellular-2
       #
-      state_topic: "homie/senseo-wifi-rf21/$stats/signal"
-      unit_of_measurement: "%"
+      state_topic: "homie/senseowifi1/$stats/signal"
+      state_class: measurement
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
       #
@@ -107,10 +264,10 @@ mqtt:
       unique_id: uniqueid__senseowifi_uptime
       icon: mdi:av-timer
       #
-      state_topic: "homie/senseo-wifi-rf21/$stats/uptime"
+      state_topic: "homie/senseowifi1/$stats/uptime"
       unit_of_measurement: "s"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -121,10 +278,10 @@ mqtt:
       unique_id: uniqueid__senseowifi_brew_coffee_normal
       icon: mdi:coffee
       #
-      command_topic: "homie/senseo-wifi-rf21/machine/brew/set"
+      command_topic: "homie/senseowifi1/machine/brew/set"
       payload_press: "1cup"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
 
@@ -132,13 +289,29 @@ mqtt:
       unique_id: uniqueid__senseowifi_brew_coffee_double
       icon: mdi:coffee
       #
-      command_topic: "homie/senseo-wifi-rf21/machine/brew/set"
+      command_topic: "homie/senseowifi1/machine/brew/set"
       payload_press: "2cup"
       #
-      availability_topic: "homie/senseo-wifi-rf21/$state"
+      availability_topic: "homie/senseowifi1/$state"
       payload_available: "ready"
       payload_not_available: "lost"
-
+      
+    - name: senseowifi_reboot
+      unique_id: uniqueid__senseowifi_reboot
+      icon: mdi:restart
+      command_topic: "homie/senseowifi1/system/reboot/set"
+      payload_press: "true"
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
+    - name: senseowifi_getsettings
+      unique_id: uniqueid__senseowifi_getsettings
+      icon: mdi:cog-outline
+      command_topic: "homie/senseowifi1/system/getSettings/set"
+      payload_press: "true"
+      availability_topic: "homie/senseowifi1/$state"
+      payload_available: "ready"
+      payload_not_available: "lost"
   ##############################################################################
 
 template:
@@ -153,6 +326,35 @@ template:
           {% endif %}
         icon: mdi:calendar-clock
         device_class: timestamp
+
+##############################################################################
+homeassistant:
+  customize:
+    switch.senseowifi_power:
+      friendly_name: "SenseoWifi"
+    binary_sensor.senseowifi_out_of_water:
+      friendly_name: "SenseoWifi Empty tank alert"
+    binary_sensor.senseowifi_cup_available:
+      friendly_name: "SenseoWifi Cup detected"
+    binary_sensor.senseowifi_cup_full:
+      friendly_name: "SenseoWifi Cup full"
+    sensor.senseowifi_brewed_size:
+      friendly_name: "SenseoWifi Prepared coffees counter (small or large)"
+    sensor.senseowifi_opstate:
+      friendly_name: "SenseoWifi Operating state"
+    sensor.senseowifi_debug:
+      friendly_name: "SenseoWifi Debug messages"
+    sensor.senseowifi_uptime:
+      friendly_name: "SenseoWifi Uptime"
+    sensor.senseowifi_rssi:
+      friendly_name: "SenseoWifi Wi-Fi signal strength (RSSI)"
+    button.senseowifi_brew_coffee_normal:
+      friendly_name: "SenseoWifi Brew single cup"
+    button.senseowifi_brew_coffee_double:
+      friendly_name: "SenseoWifi Brew large cup"
+    sensor.senseowifi_uptime_since:
+      friendly_name: "SenseoWifi Last reboot"
+
 
 ##############################################################################
 
